# haskell-logic

./: README.md  haskelllogic.cabal  package.yaml
example/: Relatives.hs
src/: ChurchList.hs  Logic.hs  NewRelation.hs  Relation.hs  RelationItem.hs  RelationQuery.hs  TestData.hs
src-temp/: TestData.hs
